# Quant

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: quantrule.mdc
config/: data_config.yaml  strategy_config.yaml
notebooks/: exploratory_analysis.ipynb
src/: __init__.py  backtest.py  backtest_runner.py  cli.py  crowding_factor.py  daily_runner.py  data_loader.py  features.py  llm_client.py  optimizer.py  report_generator.py  sentiment_analyzer.py  strategy.py  tushare_loader.py  utils.py
src/backtest/: __init__.py  analyzer.py  engine.py  result.py  vbt_backtester.py
src/data_loader/: __init__.py  base.py  cleaner.py
src/features/: __init__.py  alpha.py  base.py  ic.py  normalize.py  numba_utils.py  technical.py
src/strategy/: __init__.py  base.py  multi_factor.py  simple.py
src/tushare/: __init__.py  base.py  limit_factor.py  moneyflow.py  news.py
src/utils/: __init__.py  config.py  dataframe.py  groupby.py  messaging.py  portfolio.py  standardizer.py  timer.py
tests/: __init__.py  test_features.py  test_features_performance.py  test_strategy.py
tools/: aggregate_sentiment.py  pre_trade_check.py  sync_data.py  update_holdings.py
