[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant-system"
version = "0.1.0"
description = "A股量化交易系统 - 一个基于Python的量化交易框架"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Quant Developer", email = "dev@example.com"}
]
keywords = [
    "quantitative-trading",
    "a-share",
    "backtesting",
    "stock-market",
    "algorithmic-trading"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "tushare>=1.2.89",
    "vectorbt>=0.26.0",
    "numba>=0.58.0",
    "pyyaml>=6.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.66.0",
    "pyportfolioopt>=1.5.5",
    # LLM 情绪分析模块依赖
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
]
# Ray 分布式计算 (拥挤因子计算模块)
distributed = [
    "ray[default]>=2.9.0",
    "dask[complete]>=2024.1.0",
]
# FinBERT 情感分析模块依赖
sentiment = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
]
all = [
    "ashare-quant-system[dev,notebook,distributed,sentiment]",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ashare-quant-system"
"Bug Tracker" = "https://github.com/your-username/ashare-quant-system/issues"
"Documentation" = "https://github.com/your-username/ashare-quant-system#readme"

[project.scripts]
ashare-quant = "main:main"
aggregate-sentiment = "tools.aggregate_sentiment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip = [".venv", "data"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["data", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

